--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,10 +74,10 @@ const cardList: Card[] = cardData.cards;
 
     <svg id="lines-svg"></svg>
 
-    <div class="debug_cardstatus -z-10 w-1/2 h-1/4 right-5 bottom-5 absolute flex text-gray-500 font-mono text-sm text-right inline-block">
+    <!--<div class="debug_cardstatus -z-10 w-1/2 h-1/4 right-5 bottom-5 absolute flex text-gray-500 font-mono text-sm text-right inline-block">
       Current cards:<br>
       <div class="debug_cs_content"></div>
-    </div>
+    </div>-->
 
     <script src="/src/js/cardlogic.js"></script>
   </body>
