--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -18,6 +18,10 @@ arcana-card {
   transition-duration: 0;
 }
 
+arcana-card:hover {
+  opacity: 0.7;
+}
+
 .cardcontainer{
   position: absolute;
   width: 100%;
@@ -25,7 +29,7 @@ arcana-card {
 }
 
 .posgrid > div{
-  @apply flex justify-center items-center;
+  @apply flex justify-center items-center hover:opacity-100;
   font-size: 8pt;
-  opacity: 0.2;
+  opacity: 0;
 }
